Edit build.properties in jasper.library(R missing from ja to jar)

--- a/org.adempiere.report.jasper.library/build.properties
+++ b/org.adempiere.report.jasper.library/build.properties
@@ -3,7 +3,7 @@ bin.includes = META-INF/,\
                lib/batik-anim-1.8.jar,\
                lib/batik-awt-util-1.8.jar,\
                lib/batik-bridge-1.8.jar,\
-               lib/batik-codec-1.8.ja,\
+               lib/batik-codec-1.8.jar,\
                lib/batik-css-1.8.jar,\
                lib/batik-dom-1.8.jar,\
                lib/batik-ext-1.8.jar,\
