--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 		<module>org.idempiere.zk-feature</module>
 		<module>org.idempiere.webservices.client-feature</module>
 		<module>org.idempiere.p2</module>
+		<module>org.idempiere.javadoc</module>
 		<module>${idempiere.target}</module>
 	</modules>
 
